add type for token
